<resources>
    <!-- MISC Strings -->
    <string name="app_name">Hold \'Em Helper</string>
    <string name="howToEnterCards"><b>How to Enter Cards</b></string>
    <string name="handInputDescription1">Cards must be entered in Value&#8211;Suit format. Values and suits are abbreviated to a single letter or number (see below)</string>
    <string name="handInputDescription2">1&#8211;9 &#8211; One &#8211; Nine\n0 &#8211; Ten\nJ &#8211; Jack\nQ &#8211; Queen\nK &#8211; King\nA &#8211; AceC &#8211; Clubs\nS &#8211; Spades\nD &#8211; Diamonds\nH &#8211; Hearts</string>
    <string name="handInputDescription3">Ex: If your starting hand is Ace of Clubs and Ten of Hearts, you would enter AC0H</string>

    <!-- Main Activity Strings -->
    <string name="handRankingButtonMessage">Hand Rankings</string>
    <string name="winningOddsButtonMessage">Winning Odds</string>
    <string name="handGuideButtonMessage">Starting Hands Guide</string>
    <string name="infoButtonContent">More Info</string>
    <string name="logoContentDescription">Poker Logo</string>
    <string name="handRankingDescription">Press to see the order of scoring hands in poker.</string>
    <string name="handGuideDescription">In this section, you can give your starting hand, and My Poker Assistant will tell you what rankn your starting hand is and give you your odds of winning.</string>
    <string name="winningOddsDescription">In this section, you can give My Poker Assistant your starting hand as well as cards currently revealed on the table, and it will tell you your winning odds.</string>

    <!-- Hand Ranking Activity Strings -->
    <string name="rankingTitle">Poker Hand Rankings</string>
    <string name="rankingRoyalFlush">1. Royal Flush</string>
    <string name="rankingStraightFlush">2. Straight Flush</string>
    <string name="rankingFourOfAKind">3. Four of a Kind</string>
    <string name="rankingFullHouse">4. Full House</string>
    <string name="rankingFlush">5. Flush</string>
    <string name="rankingStraight">6. Straight</string>
    <string name="rankingThreeOfAKind">7. Three of a Kind</string>
    <string name="rankingTwoPair">8. Two Pair</string>
    <string name="rankingOnePair">9. One Pair</string>
    <string name="rankingHighCard">10. High Card</string>
    <string name="rankingScrollView">Scroll View</string>
    <string name="rankingRoyalFlushImageContentDescription">10 of Clubs, Jack of Clubs, Queen of Clubs, King of Clubs, Ace of Clubs</string>
    <string name="rankingStraightFlushImageContentDescription">5 of Diamonds, 6 of Diamonds, 7 of Diamonds, 8 of Diamonds, 9 of Diamonds</string>
    <string name="rankingFourOfAKindImageContentDescription">8 of Clubs, 8 of Diamonds, 8 of Hearts, 8 of Spades, 4 of Spades</string>
    <string name="rankingFullHouseImageContentDescription">6 of Spades, 6 of Hearts, 6 of Diamonds, 3 of Clubs, 3 of Diamonds</string>
    <string name="rankingFlushImageContentDescription">5 of Clubs, 8 of Clubs, 10 of Clubs, Queen of Clubs, King of Clubs</string>
    <string name="rankingStraightImageContentDescription">10 of Clubs, Jack of Diamonds, Queen of Spades, King of Hearts, Ace of Spades</string>
    <string name="rankingThreeOfAKindImageContentDescription">6 of Spades, 6 of Hearts, 6 of Diamonds, 3 of Clubs, 5 of Clubs</string>
    <string name="rankingTwoPairImageContentDescription">7 of Hearts, 7 of Spades, 9 of Diamonds, 9 of Clubs, 4 of Spades</string>
    <string name="rankingOnePairImageContentDescription">Ace of Spades, Ace of Hearts, 6 of Spades, 4 of Diamonds, 2 of Hearts</string>
    <string name="rankingHighCardImageContentDescription">King of Clubs, 8 of Spades, 6 of Diamonds, 5 of Diamonds, 3 of Clubs</string>


    <!-- Winning Odds Activity Strings -->
    <string name="oddsHandCard1">Hand Card 1</string>
    <string name="oddsHandCard2">Hand Card 2</string>
    <string name="oddsTableCard1">Table Card 1</string>
    <string name="oddsTableCard2">Table Card 2</string>
    <string name="oddsTableCard3">Table Card 3</string>
    <string name="oddsTableCard4">Table Card 4</string>
    <string name="oddsTableCard5">Table Card 5</string>
    <string name="oddsHand">Hand</string>
    <string name="oddsTable">Table</string>
    <string name="oddsGetOdds">Get Odds</string>
    <string name="oddsHandUserInput">Hand Input</string>
    <string name="oddsTableUserInput">Table Input</string>
    <string name="oddsHandHint">Enter Hand</string>
    <string name="oddsTableHint">Enter Table Cards</string>
    <string name="oddsInvalidInputNumCards">Invalid Number Of Cards Entered\nPress ? for Help</string>
    <string name="oddsInvalidInputWrongChar">Invalid Characters Detected\nPress ? for Help</string>
    <string name="oddsInvalidInputRepeatedCard">Repeated Cards Detected\nPress ? for Help</string>
    <string name="oddsOutputMessage">%.3f</string>
    <string name="oddsHelpButtonContentDescription">Press For Help</string>
    <string name="oddsPopUpCloseButtonContentDescription">Press to Close</string>
    <string name="oddsPleaseWaitMessageFlop">Calculating odds&#8230;\nCalculating from flop takes longest </string>
    <string name="oddsPleaseWaitMessage">Calculating odds&#8230;</string>
    <string name="oddsPupUpWinningOdds"><b>Winning Odds</b></string>
    <string name="oddsPopUpDescription">The odds your hand beats another random hand\n<b>Note:</b> This is not a practical statistic to use when determining whether or not to play your hand. Instead, it should be used to inform you of the general strength of your hand given a flop/turn/river.</string>
    <string name="oddsPopUpHowToEnterCards"><b>How to Enter Cards</b></string>
    <string name="oddsInputDescription1">Cards must be entered in Value&#8211;Suit format. Values and suits are abbreviated to a single letter or number (see below)</string>
    <string name="oddsInputDescription2">1&#8211;9 &#8211; One &#8211; Nine\n0 &#8211; Ten\nJ &#8211; Jack\nQ &#8211; Queen\nK &#8211; King\nA &#8211; Ace\nC &#8211; Clubs\nS &#8211; Spades\nD &#8211; Diamonds\nH &#8211; Hearts</string>
    <string name="oddsInputDescription3"><b>Note:</b> You must enter at least three table cards. The more cards you enter, the faster My Poker Assistant is able to calculate your winning odds.</string>
    <string name="oddsTitleText">Winning Odds</string>
    <string name="loadingMessage">Calculating Odds&#8230; Please Wait</string>

    <!-- Hand Ranking Activity Strings -->
    <string name="rankingTitleText">Starting Hand Guide</string>
    <string name="rankingUserInputHint">Enter Starting Hand Here</string>
    <string name="rankingButtonText">Get Rank</string>
    <string name="rankingInvalidInput">Invalid Hand\nPress ? for Help.</string>
    <string name="rankingInvalidHand">Invalid Hand</string>
    <string name="rankingInvalidHandNumCards">Invalid Number of Cards</string>
    <string name="rankingInvalidHandInvalidChar">Invalid Character Detected</string>
    <string name="rankingInvalidHandDuplicateCard">Duplicate Cards Detected</string>
    <string name="rankingPressForHelp">Press ? for Help</string>
    <string name="rankingRankText">Rank:</string>
    <string name="rankingWinPCTText">Win Percent:</string>
    <string name="rankingPopUpRank"><b>Rank</b></string>
    <string name="rankingPopUpRankDescription">The hand\'s rank out of the 169 possible starting hands</string>
    <string name="rankingPopUpWinPCT"><b>Win Percent</b></string>
    <string name="rankingPopUpWinPCTDescription">How often this hand wins when paired against nine other random hands.</string>
</resources>